# fund-compliance-reporting

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: __init__.py  application.py  bootstrap.py  pipeline.py  settings.py
app/audit/: __init__.py  database.py  events.py  models.py  repository.py  service.py
app/computation/: __init__.py  aggregate.py  allocation.py  base.py  concentration.py  engine.py  evaluator.py  liquidity.py  market_risk.py  models.py
app/config/: __init__.py  loader.py
app/configuration/: loader.py  profiles.py  settings.py
app/graph/: __init__.py  bootstrap.py  cypher_runner.py  database.py  graph_builder.py  graph_loader.py  image_service.py  networkx_renderer.py  query.py  query_service.py  renderer.py  renderer_models.py  test_graph_render.py
app/holdings/: __init__.py  loader.py  models.py
app/narrative/: builder.py  firewall.py  generator.py  models.py  openai_generator.py  prompt.py  report.py  rules.py
app/reconciliation/: comparator.py  engine.py  loader.py  mapping.py  models.py
app/traceability/: __init__.py  builder.py  models.py  neo4j_traceability_repository.py  registry.py  repository.py  service.py
configs/: firm_a.yaml  firm_b.yaml
docs/: 01_flow_and_audit_events.md  02_architecture.md  03_rfc.md  04_knowledge_graph.md  05_graph_review_workflow.md  06_computation_engine.md  07_methodology_configuration.md  08_reconciliation_strategy.md
neo4j/: 01_constraints.cypher  02_indexes.cypher  03_schema.cypher
schema/db/: schema.sql
(+24 files in other folders)
