[project]
name = "fund-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=6.2.0",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]


[tool.pyright]
reportUnknownVariableType = false
