[project]
name = "fund-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "neo4j>=6.2.0",
    "networkx[default]>=3.6.1",
    "openai>=2.44.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "reportlab>=5.0.0",
]


[tool.pyright]
reportUnknownVariableType = false
